Make sure it's left-aligned

--- a/assets/sass/_typographic-hierarchy.scss
+++ b/assets/sass/_typographic-hierarchy.scss
@@ -355,6 +355,7 @@
   font-family: $font-secondary;
   @include font-size(14);
   line-height: (19/14);
+  text-align: left;
 }
 
 // No definition in developer docs, this is inferred from styles already applied to filter-group.
